@@ -1,4 +1,5 @@
 r17 ====================================================================
++ добавлен класс CrossfadeGenGradGen (см. описание)
 - исправлен метод ConstantGradGen.init_attrs() - пытался получить
   параметр по имени "value" вместо "values"
 - исправления в конструкторе класса GradPosition, из-за которого мог
@@ -8,6 +9,7 @@ r17 ====================================================================
   принудительно вгоняются в требуемый диапазон в методе __DMX_send_frame()
 - исправлен метод SequenceGenGradGen.get_next_value() - производилась
   лишняя итерация
++ дополнена демонстрационная программа example.py
 
 r16 ====================================================================
 * метод GradGen.param_get_grad() переименован в kwargs_get(), т.к.
